--- a/templates/login.html
+++ b/templates/login.html
@@ -1,37 +1,42 @@
 {%  extends 'base.html' %}
 {% load static %}
 
+{% block content %}
 
-<!DOCTYPE html>
-<html>
-<head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title> Login Page </title>
-{#<link rel="stylesheet", type="text/css", href="{% static 'css/styles.css' %}">#}
-</head>
-<body>
-{% block content %}
-    <link rel="stylesheet", type="text/css", href="{% static 'css/styles.css' %}">
-    <img src="{% static "images/randpic.jpg" %}" alt="My image">
-    <center> <h1> Login </h1> </center>
-    <form action="login" method="post">
-    {% csrf_token %}
-        <div class="container">
-            <label>Username {{ name }} : </label>
-            <input type="text" placeholder="Enter Username" name="username" required>
-            <label>Password : </label>
-            <input type="password" placeholder="Enter Password" name="password" required>
-            <button type="submit">Login</button>
-            <input type="checkbox" checked="checked"> Remember me
-            <button type="button" class="cancelbtn"> Cancel</button>
-             <a href="/registration"> Sign in? </a>
+<link rel="stylesheet", type="text/css", href="{% static 'css/signupcss.css' %}">
+<link href="{% static 'vendor/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
+
+    <body>
+    <div class="container-fluid bg">
+        <div class="row justify-content-center">
+            <div class="col-12 col-sm-6 col-md-3">
+
+                    <form class="form-container" action="login" method="post">
+                        {% csrf_token %}
+                        <h1> Login </h1>
+                        <div class="form-group">
+                            <label>Username : </label>
+                            <input type="text" placeholder="Enter Username" name="username" required>
+                        </div>
+                        <div class="form-group">
+                            <label>Password : </label>
+                            <input type="password" placeholder="Enter Password" name="password" required>
+                        </div>
+                        <button type="submit" class="btn-block">Login</button><br>
+                        <p>Not a member?<a href="/registration"> Sign in? </a></p>
+
+                        <div>
+                                {% for message in messages %}
+                                    <h2>{{ message }}</h2>
+                                {% endfor %}
+                        </div>
+                    </form>
+                </div>
+            </div>
         </div>
-        <div>
-                {% for message in messages %}
-                    <h2>{{ message }}</h2>
-                {% endfor %}
-        </div>
-    </form>
+    </body>
 
 {% endblock %}
-</body>
+
