--- a/templates/base.html
+++ b/templates/base.html
@@ -1,12 +1,42 @@
 {% load static %}
+{% block content %}
 
-<html>
+
+
 <head>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<title> Base Page </title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="{% static 'vendor/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
+    <link href="{% static 'css/simple-sidebar.css' %}" rel="stylesheet">
+    <title> Base Page </title>
 </head>
 <body>
-    {% block content %}
-    {% endblock %}
+   <div class="d-flex" id="wrapper">
+
+    <!-- Sidebar -->
+    <div class="bg-light border-right" id="sidebar-wrapper">
+      <div class="sidebar-heading">Rest POS</div>
+      <div class="list-group list-group-flush">
+        <a href="#" class="list-group-item list-group-item-action bg-light">Drinks</a>
+        <a href="#" class="list-group-item list-group-item-action bg-light">Food</a>
+        <a href="#" class="list-group-item list-group-item-action bg-light">Orders</a>
+        <a href="#" class="list-group-item list-group-item-action bg-light">Staff</a>
+        <a href="#" class="list-group-item list-group-item-action bg-light">Profile</a>
+        <a href="#" class="list-group-item list-group-item-action bg-light">Status</a>
+      </div>
+    </div>
+    <!-- /#sidebar-wrapper -->
+
+    <!-- Page Content -->
+    <div id="page-content-wrapper">
+
+      <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom">
+        <button class="btn btn-primary" id="menu-toggle">Toggle Menu</button>
+          {% if user.is_authenticated %}
+          <li>Logged in as: {{user.username }}</li>
+        <a href="/logout">Logout</a>
+          {% endif %}
+      </nav>
+    </div>
+   </div>
 </body>
-</html>
+{% endblock %}
