--- a/templates/food.html
+++ b/templates/food.html
@@ -1,2 +1,289 @@
 {% extends 'base.html' %}
+{% load static %}
+{% block content %}
+<link href="{% static 'vendor/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
+<link href="{% static 'css/food_page.css' %}" rel="stylesheet">
 
+<!-- Bootstrap core JavaScript -->
+<script src="{% static 'vendor/jquery/jquery.min.js' %}"></script>
+<script src="{% static 'vendor/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
+<script src="{% static 'js_scripts/food_page.js' %}"></script>
+
+<div class="col-md-8">
+<div class="btn-group" role="group" aria-label="Basic example">
+  <button type="button" class="btn btn-secondary">Breakfast</button>
+  <button type="button" class="btn btn-secondary">Lunch</button>
+  <button type="button" class="btn btn-secondary">Dinner</button>
+  <button type="button" class="btn btn-secondary">Dessert</button>
+  <button type="button" class="btn btn-secondary">Snacks</button>
+</div>
+
+<!-- carousel items -->
+
+    <div id="carouselExampleIndicators" class="carousel slide">
+      <ol class="carousel-indicators">
+        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+      </ol>
+      <div class="carousel-inner">
+
+            <div class="carousel-item active">
+                <div class="row carouselrows">
+                    <div class="col-md-2">
+                        <button type="button" class="btn btn-primary btn-lg">Large button</button>
+                    </div>
+                    <div class="col-md-2">
+                        <button type="button" class="btn btn-primary btn-lg">Large button</button>
+                    </div>
+                    <div class="col-md-2">
+                        <button type="button" class="btn btn-primary btn-lg">Large button</button>
+                    </div>
+                    <div class="col-md-2">
+                        <button type="button" class="btn btn-primary btn-lg">Large button</button>
+                    </div>
+                     <div class="col-md-2">
+                        <button type="button" class="btn btn-primary btn-lg">Large button</button>
+                    </div>
+                </div>
+                <div class="row carouselrows">
+                    <div class="col-md-2">
+                        <button type="button" class="btn btn-primary btn-lg">Large button</button>
+                    </div>
+                    <div class="col-md-2">
+                        <button type="button" class="btn btn-primary btn-lg">Large button</button>
+                    </div>
+                    <div class="col-md-2">
+                        <button type="button" class="btn btn-primary btn-lg">Large button</button>
+                    </div>
+                    <div class="col-md-2">
+                        <button type="button" class="btn btn-primary btn-lg">Large button</button>
+                    </div>
+                     <div class="col-md-2">
+                        <button type="button" class="btn btn-primary btn-lg">Large button</button>
+                    </div>
+                </div>
+                <div class="row carouselrows">
+                    <div class="col-md-2">
+                        <button type="button" class="btn btn-primary btn-lg">Large button</button>
+                    </div>
+                    <div class="col-md-2">
+                        <button type="button" class="btn btn-primary btn-lg">Large button</button>
+                    </div>
+                    <div class="col-md-2">
+                        <button type="button" class="btn btn-primary btn-lg">Large button</button>
+                    </div>
+                    <div class="col-md-2">
+                        <button type="button" class="btn btn-primary btn-lg">Large button</button>
+                    </div>
+                     <div class="col-md-2">
+                        <button type="button" class="btn btn-primary btn-lg">Large button</button>
+                    </div>
+                </div>
+                <div class="row carouselrows">
+                    <div class="col-md-2">
+                        <button type="button" class="btn btn-primary btn-lg">Large button</button>
+                    </div>
+                    <div class="col-md-2">
+                        <button type="button" class="btn btn-primary btn-lg">Large button</button>
+                    </div>
+                    <div class="col-md-2">
+                        <button type="button" class="btn btn-primary btn-lg">Large button</button>
+                    </div>
+                    <div class="col-md-2">
+                        <button type="button" class="btn btn-primary btn-lg">Large button</button>
+                    </div>
+                     <div class="col-md-2">
+                        <button type="button" class="btn btn-primary btn-lg">Large button</button>
+                    </div>
+                </div>
+            </div>
+
+            <div class="carousel-item">
+               <div class="row carouselrows">
+                    <div class="col-md-2">
+                        <button type="button" class="btn btn-primary btn-lg">Large button</button>
+                    </div>
+                    <div class="col-md-2">
+                        <button type="button" class="btn btn-primary btn-lg">Large button</button>
+                    </div>
+                    <div class="col-md-2">
+                        <button type="button" class="btn btn-primary btn-lg">Large button</button>
+                    </div>
+                    <div class="col-md-2">
+                        <button type="button" class="btn btn-primary btn-lg">Large button</button>
+                    </div>
+                     <div class="col-md-2">
+                        <button type="button" class="btn btn-primary btn-lg">Large button</button>
+                    </div>
+                </div>
+                <div class="row carouselrows">
+                    <div class="col-md-2">
+                        <button type="button" class="btn btn-primary btn-lg">Large button</button>
+                    </div>
+                    <div class="col-md-2">
+                        <button type="button" class="btn btn-primary btn-lg">Large button</button>
+                    </div>
+                    <div class="col-md-2">
+                        <button type="button" class="btn btn-primary btn-lg">Large button</button>
+                    </div>
+                    <div class="col-md-2">
+                        <button type="button" class="btn btn-primary btn-lg">Large button</button>
+                    </div>
+                     <div class="col-md-2">
+                        <button type="button" class="btn btn-primary btn-lg">Large button</button>
+                    </div>
+                </div>
+                <div class="row carouselrows">
+                    <div class="col-md-2">
+                        <button type="button" class="btn btn-primary btn-lg">Large button</button>
+                    </div>
+                    <div class="col-md-2">
+                        <button type="button" class="btn btn-primary btn-lg">Large button</button>
+                    </div>
+                    <div class="col-md-2">
+                        <button type="button" class="btn btn-primary btn-lg">Large button</button>
+                    </div>
+                    <div class="col-md-2">
+                        <button type="button" class="btn btn-primary btn-lg">Large button</button>
+                    </div>
+                     <div class="col-md-2">
+                        <button type="button" class="btn btn-primary btn-lg">Large button</button>
+                    </div>
+                </div>
+                <div class="row carouselrows">
+                    <div class="col-md-2">
+                        <button type="button" class="btn btn-primary btn-lg">Large button</button>
+                    </div>
+                    <div class="col-md-2">
+                        <button type="button" class="btn btn-primary btn-lg">Large button</button>
+                    </div>
+                    <div class="col-md-2">
+                        <button type="button" class="btn btn-primary btn-lg">Large button</button>
+                    </div>
+                    <div class="col-md-2">
+                        <button type="button" class="btn btn-primary btn-lg">Large button</button>
+                    </div>
+                     <div class="col-md-2">
+                        <button type="button" class="btn btn-primary btn-lg">Large button</button>
+                    </div>
+                </div>
+            </div>
+
+            <div class="carousel-item">
+               <div class="row carouselrows">
+                    <div class="col-md-2">
+                        <button type="button" class="btn btn-primary btn-lg">Large button</button>
+                    </div>
+                    <div class="col-md-2">
+                        <button type="button" class="btn btn-primary btn-lg">Large button</button>
+                    </div>
+                    <div class="col-md-2">
+                        <button type="button" class="btn btn-primary btn-lg">Large button</button>
+                    </div>
+                    <div class="col-md-2">
+                        <button type="button" class="btn btn-primary btn-lg">Large button</button>
+                    </div>
+                     <div class="col-md-2">
+                        <button type="button" class="btn btn-primary btn-lg">Large button</button>
+                    </div>
+                </div>
+                <div class="row carouselrows">
+                    <div class="col-md-2">
+                        <button type="button" class="btn btn-primary btn-lg">Large button</button>
+                    </div>
+                    <div class="col-md-2">
+                        <button type="button" class="btn btn-primary btn-lg">Large button</button>
+                    </div>
+                    <div class="col-md-2">
+                        <button type="button" class="btn btn-primary btn-lg">Large button</button>
+                    </div>
+                    <div class="col-md-2">
+                        <button type="button" class="btn btn-primary btn-lg">Large button</button>
+                    </div>
+                     <div class="col-md-2">
+                        <button type="button" class="btn btn-primary btn-lg">Large button</button>
+                    </div>
+                </div>
+                <div class="row carouselrows">
+                    <div class="col-md-2">
+                        <button type="button" class="btn btn-primary btn-lg">Large button</button>
+                    </div>
+                    <div class="col-md-2">
+                        <button type="button" class="btn btn-primary btn-lg">Large button</button>
+                    </div>
+                    <div class="col-md-2">
+                        <button type="button" class="btn btn-primary btn-lg">Large button</button>
+                    </div>
+                    <div class="col-md-2">
+                        <button type="button" class="btn btn-primary btn-lg">Large button</button>
+                    </div>
+                     <div class="col-md-2">
+                        <button type="button" class="btn btn-primary btn-lg">Large button</button>
+                    </div>
+                </div>
+                <div class="row carouselrows">
+                    <div class="col-md-2">
+                        <button type="button" class="btn btn-primary btn-lg">Large button</button>
+                    </div>
+                    <div class="col-md-2">
+                        <button type="button" class="btn btn-primary btn-lg">Large button</button>
+                    </div>
+                    <div class="col-md-2">
+                        <button type="button" class="btn btn-primary btn-lg">Large button</button>
+                    </div>
+                    <div class="col-md-2">
+                        <button type="button" class="btn btn-primary btn-lg">Large button</button>
+                    </div>
+                     <div class="col-md-2">
+                        <button type="button" class="btn btn-primary btn-lg">Large button</button>
+                    </div>
+                </div>
+            </div>
+      </div>
+        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
+    </div>
+</div>
+<div class="col-md-4">
+    <div class="btn-group" role="group" aria-label="Basic example">
+      <button type="button" class="btn btn-secondary">Some</button>
+      <button type="button" class="btn btn-secondary">funct</button>
+    </div>
+    <div class="border_checkout">
+        <table class="table table-borderless">
+          <thead>
+            <tr>
+              <th scope="col">Item</th>
+              <th scope="col">Quantity</th>
+              <th scope="col">Price</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>Mark</td>
+              <td>Otto</td>
+              <td>@mdo</td>
+            </tr>
+            <tr>
+              <td>Jacob</td>
+              <td>Thornton</td>
+              <td>@fat</td>
+            </tr>
+            <tr>
+              <td colspan="2">Larry the Bird</td>
+              <td>@twitter</td>
+            </tr>
+          </tbody>
+        </table>
+    </div>
+</div>
+
+{#<h2>hello</h2>#}
+{% endblock %}
