--- a/templates/index_page.html
+++ b/templates/index_page.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+
 {% load static %}
 {% block content %}
 
@@ -12,7 +12,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Simple Sidebar - Start Bootstrap Template</title>
+  <title>Index page</title>
 
   <!-- Bootstrap core CSS -->
   <link href="{% static 'vendor/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
@@ -31,7 +31,7 @@
       <div class="sidebar-heading">Rest POS</div>
       <div class="list-group list-group-flush">
         <a href="#" class="list-group-item list-group-item-action bg-light">Drinks</a>
-        <a href="#" class="list-group-item list-group-item-action bg-light">Food</a>
+        <a href="{% url 'food_home' %}" class="list-group-item list-group-item-action bg-light">Food</a>
         <a href="#" class="list-group-item list-group-item-action bg-light">Orders</a>
         <a href="#" class="list-group-item list-group-item-action bg-light">Staff</a>
         <a href="#" class="list-group-item list-group-item-action bg-light">Profile</a>
