--- a/static/css/signupcss.css
+++ b/static/css/signupcss.css
@@ -4,7 +4,7 @@
 	background: #ffffff;
 	padding: 50px;
 	border-radius: 10px;
-	box-shadow: 0px 0px 10px #f04b4c;
+	box-shadow: 0px 0px 10px #f0ad4e;
 }
 h1{
 	color: #213159;
@@ -16,6 +16,9 @@ h1{
 	background-size: 100%;
 }
 .btn-block{
-	background-color: #f04b4c;
+	background-color: #f0ad4e;
 	border-radius: 10px;
+}
+a:link{
+	color: #f0ad4e;
 }
