--- a/static/css/simple-sidebar.css
+++ b/static/css/simple-sidebar.css
@@ -10,7 +10,6 @@
 
 #sidebar-wrapper {
   min-height: 100vh;
-  margin-left: -15rem;
   -webkit-transition: margin .25s ease-out;
   -moz-transition: margin .25s ease-out;
   -o-transition: margin .25s ease-out;
@@ -64,4 +63,10 @@ h1{
 }
 .container-fluid.backcolor{
   background-color:   #e7e7e7;
+}
+.float_login{
+float: right;
+}
+.container-fluid{
+  padding: 0 !important;
 }
