--- a/templates/base.html
+++ b/templates/base.html
@@ -4,6 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="{% static 'vendor/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'css/simple-sidebar.css' %}" type="text/css"/>
+    <script src="https://kit.fontawesome.com/961150d9ae.js" crossorigin="anonymous"></script>
     <title> Base Page </title>
 </head>
 <body>
@@ -14,12 +15,12 @@
     <div class="bg-light border-right" id="sidebar-wrapper">
       <div class="sidebar-heading">Rest POS</div>
       <div class="list-group list-group-flush">
-        <a href="/login" class="list-group-item list-group-item-action bg-light">Drinks</a>
-        <a href="#" class="list-group-item list-group-item-action bg-light">Food</a>
-        <a href="#" class="list-group-item list-group-item-action bg-light">Orders</a>
-        <a href="#" class="list-group-item list-group-item-action bg-light">Staff</a>
-        <a href="#" class="list-group-item list-group-item-action bg-light">Profile</a>
-        <a href="#" class="list-group-item list-group-item-action bg-light">Status</a>
+        <a href="/login" class="list-group-item list-group-item-action bg-light"><i class="fa fa-dashboard"></i>&nbsp;Dashboard</a>
+        <a href="{% url 'food_home' %}" class="list-group-item list-group-item-action bg-light"><i class="fa fa-money" aria-hidden="true"></i>&nbsp;Sell</a>
+        <a href="#" class="list-group-item list-group-item-action bg-light"><i class="fa fa-bar-chart" aria-hidden="true"></i>&nbsp;Inventory</a>
+        <a href="#" class="list-group-item list-group-item-action bg-light"><i class="fa fa-users" aria-hidden="true"></i>&nbsp;Staff</a>
+        <a href="#" class="list-group-item list-group-item-action bg-light"><i class="fa fa-cutlery" aria-hidden="true"></i>&nbsp;Kitchen</a>
+        <a href="#" class="list-group-item list-group-item-action bg-light"><i class="fa fa-cog" aria-hidden="true"></i>&nbsp;Settings</a>
       </div>
     </div>
 
@@ -29,12 +30,14 @@
     <div id="page-content-wrapper">
 
       <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom">
-        <button class="btn btn-primary" id="menu-toggle">Toggle Menu</button>
+          <button class="btn btn-warning" id="menu-toggle"><i class="fa fa-bars"></i></button>
+        <div class="container">
+            {% if user.is_authenticated %}
+                <p class="text-right">Logged in as: {{user.username }}</p>
+                <a class="btn btn-warning navbar-btn navbar-right pull-right" href="/logout">Logout</a>
+            {% endif %}
+        </div>
 
-          {% if user.is_authenticated %}
-          <li>Logged in as: {{user.username }}</li>
-          <a href="/logout">Logout</a>
-          {% endif %}
       </nav>
 
         <div class="row row_style">
