adding inventory app

--- a/templates/base.html
+++ b/templates/base.html
@@ -15,12 +15,12 @@
     <div class="bg-light border-right" id="sidebar-wrapper">
       <div class="sidebar-heading">Rest POS</div>
       <div class="list-group list-group-flush">
-        <a href="/login" class="list-group-item list-group-item-action bg-light"><i class="fa fa-dashboard"></i>&nbsp;Dashboard</a>
-        <a href="{% url 'food_home' %}" class="list-group-item list-group-item-action bg-light"><i class="fa fa-money" aria-hidden="true"></i>&nbsp;Sell</a>
-        <a href="#" class="list-group-item list-group-item-action bg-light"><i class="fa fa-bar-chart" aria-hidden="true"></i>&nbsp;Inventory</a>
-        <a href="#" class="list-group-item list-group-item-action bg-light"><i class="fa fa-users" aria-hidden="true"></i>&nbsp;Staff</a>
-        <a href="#" class="list-group-item list-group-item-action bg-light"><i class="fa fa-cutlery" aria-hidden="true"></i>&nbsp;Kitchen</a>
-        <a href="#" class="list-group-item list-group-item-action bg-light"><i class="fa fa-cog" aria-hidden="true"></i>&nbsp;Settings</a>
+        <a href="/login" class="list-group-item list-group-item-action bg-light sidebck"><i class="fa fa-dashboard"></i>&nbsp;Dashboard</a>
+        <a href="{% url 'food_home' %}" class="list-group-item list-group-item-action bg-light sidebck"><i class="fa fa-money" aria-hidden="true"></i>&nbsp;Sell</a>
+        <a href="{% url 'inventory_home' %}" class="list-group-item list-group-item-action bg-light sidebck"><i class="fa fa-bar-chart" aria-hidden="true"></i>&nbsp;Inventory</a>
+        <a href="#" class="list-group-item list-group-item-action bg-light sidebck"><i class="fa fa-users" aria-hidden="true"></i>&nbsp;Staff</a>
+        <a href="#" class="list-group-item list-group-item-action bg-light sidebck"><i class="fa fa-cutlery" aria-hidden="true"></i>&nbsp;Kitchen</a>
+        <a href="#" class="list-group-item list-group-item-action bg-light sidebck"><i class="fa fa-cog" aria-hidden="true"></i>&nbsp;Settings</a>
       </div>
     </div>
 
