--- a/static/css/food_page.css
+++ b/static/css/food_page.css
@@ -15,6 +15,7 @@
   -moz-transition: margin .25s ease-out;
   -o-transition: margin .25s ease-out;
   transition: margin .25s ease-out;
+
 }
 
 #sidebar-wrapper .sidebar-heading {
@@ -72,10 +73,20 @@ h1{
 .border_checkout{
   padding-top: 10px;
   border-radius: 15px;
-  background-color:  #3d6098;
+  background-color:  #ffffff;
   width: 100%;
   height: 100%;
 }
 .button-color{
-  background-color: #3d6098 ;
+  background-color:   #e7e7e7;
+  border-color:  #2f3180;
+}
+.inputsize{
+  width: 120px;
+}
+.line-above{
+  border-top: 1px solid #2f3180 ;
+}
+.btnextend{
+  width: 100%;
 }
