--- a/templates/inventory.html
+++ b/templates/inventory.html
@@ -6,39 +6,80 @@
 <link href="{% static 'vendor/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
 <link rel="stylesheet" href="{% static 'css/inventory.css' %}" type="text/css"/>
 <script src="https://kit.fontawesome.com/961150d9ae.js" crossorigin="anonymous"></script>
+
     <div class="container-padding">
-        <button type="button" class="btn btn-warning" aria-hidden="true" data-toggle="modal" data-target=".bd-example-modal-lg"><i class="fa fa-plus"></i>&nbsp;Add sale products</button>
-{#        <button type="button" class="btn btn-primary" data-toggle="modal" data-target=".bd-example-modal-lg">Large modal</button>#}
+    <div class="row">
+        <div class="alert alert-info">
+                {% if messages %}
+                    <ul class="messages">
+                    {% for message in messages %}
+                        <li {% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+                    {% endfor %}
+                    </ul>
+                {% endif %}
+            </div>
+    </div>
 
-        <div class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
-          <div class="modal-dialog modal-lg">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLongTitle">Add product</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                      <span aria-hidden="true">&times;</span>
-                    </button>
-                </div>
-                <div class="modal-body">
-                    <form class="form-style" action="/inventory_home" method="post">
-                        {% csrf_token %}
-                        {{product_form|crispy}}
-                        <div class="modal-footer">
-                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                            <button type="submit" class="btn btn-warning">Save changes</button>
+        <div class="row">
+
+            <div class="col-md-6">
+                <button type="button" class="btn btn-warning" aria-hidden="true" data-toggle="modal" data-target=".bd-example-modal-lg"><i class="fa fa-plus"></i>&nbsp;Add menu items</button>
+
+                <div class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+                  <div class="modal-dialog modal-lg">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="exampleModalLongTitle">Add menu item</h5>
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                              <span aria-hidden="true">&times</span>
+                            </button>
                         </div>
-                    </form>
+                        <div class="modal-body">
+                            <form class="form-style" action = "{% url 'inventory_home' %}" method="post">
+                                {% csrf_token %}
+                                {{product_form|crispy}}
 
-
+                                <div class="modal-footer">
+                                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                                    <button type="submit" class="btn btn-warning">Save changes</button>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                  </div>
                 </div>
-{#                <div class="modal-footer">#}
-{#                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>#}
-{#                    <button type="button" class="btn btn-warning">Save changes</button>#}
-{#                </div>#}
+            </div>
+            <div class="col-md-6">
+                <button type="button" class="btn btn-warning" aria-hidden="true" data-toggle="modal" data-target=".bd-example-modal-lg"><i class="fa fa-plus"></i>&nbsp;Upload file</button>
+
+                <div class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+                  <div class="modal-dialog modal-lg">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="exampleModalLongTitle">Add menu item</h5>
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                              <span aria-hidden="true">&times</span>
+                            </button>
+                        </div>
+                        <div class="modal-body">
+                             <form action="{% url "uploadfile" %}" method="post" enctype="multipart/form-data">
+                                <p>Only upload csv files</p>
+                                {% csrf_token %}
+                                {{ upload_form|crispy }}
+                                <button type="submit" class="btn btn-warning">Submit file</button>
+                            </form>
+                             <div class="modal-footer">
+                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                                <button type="submit" class="btn btn-warning">Save changes</button>
+                             </div>
+                        </div>
+                    </div>
+                  </div>
+                </div>
 
             </div>
-          </div>
         </div>
+
     </div>
 
 {% endblock %}
