base page with previous menu toogle and adding base_page.js

--- a/templates/base.html
+++ b/templates/base.html
@@ -3,7 +3,7 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="{% static 'vendor/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
-    <link rel="stylesheet" href="{% static 'css/simple-sidebar.css' %}" type="text/css"/>
+    <link rel="stylesheet" href="{% static 'css/base_page.css' %}" type="text/css"/>
     <script src="https://kit.fontawesome.com/961150d9ae.js" crossorigin="anonymous"></script>
     <title> Base Page </title>
 </head>
