--- a/templates/inventory.html
+++ b/templates/inventory.html
@@ -14,7 +14,7 @@
 
 
     <div class="container-padding">
-    <div class="row">
+    <div class="row row_padding">
         <div class="alert alert-info" id="messages_inventory">
             {% if messages %}
                 <ul class="messages" >
@@ -28,7 +28,6 @@
     </div>
 
         <div class="row">
-
             <div class="col-md-6">
                 <button type="button" class="btn btn-warning" aria-hidden="true" data-toggle="modal" data-target=".bd-example-modal-lg"><i class="fa fa-plus"></i>&nbsp;Add menu items</button>
 
