--- a/static/css/base_page.css
+++ b/static/css/base_page.css
@@ -1,67 +1,112 @@
+#wrapper{
+  display: block;
+  width: 100%;
+  height: 100%;
+  overflow-x: hidden;
 
- #wrapper {
-    overflow-x: hidden;
- }
-
-#sidebar-wrapper {
+}
+#sidebar {
+  min-width: 250px;
+  max-width: 250px;
   min-height: 100vh;
   -webkit-transition: margin .25s ease-out;
   -moz-transition: margin .25s ease-out;
   -o-transition: margin .25s ease-out;
   transition: margin .25s ease-out;
+/*  height: 100%;*/
+/*  position: fixed;*/
+  top: 0;
+  left: 0;
+/*  z-index: 999;*/
+/*  min-height: 100vh;*/
 }
 
-#sidebar-wrapper .sidebar-heading {
-  padding: 0.875rem 1.25rem;
-  font-size: 1.2rem;
+#sidebar .sidebar-header{
+  padding: 20px;
+  border-bottom: 3px solid #ffcc14;
 }
 
-#sidebar-wrapper .list-group {
-  width: 15rem;
+#sidebar.active{
+  margin-left: -250px;
 }
 
-#page-content-wrapper {
-  min-width: 100vw;
-}
-
-#wrapper.toggled #sidebar-wrapper {
-  margin-left: 0;
-}
-
-@media (min-width: 768px) {
-  #sidebar-wrapper {
+@media (max-width: 768px) {
+  #sidebar {
+    margin-left: -250px;
+  }
+  #sidebar.active{
     margin-left: 0;
   }
+}
+
+/*#sidebar .sidebar-heading {*/
+/*  padding: 0.875rem 1.25rem;*/
+/*  font-size: 1.2rem;*/
+/*}*/
+
+/* #wrapper {*/
+/*    overflow-x: hidden;*/
+/* }*/
+
+/*#sidebar-wrapper {*/
+/*  min-height: 100vh;*/
+/*  -webkit-transition: margin .25s ease-out;*/
+/*  -moz-transition: margin .25s ease-out;*/
+/*  -o-transition: margin .25s ease-out;*/
+/*  transition: margin .25s ease-out;*/
+/*}*/
+
+/*#sidebar-wrapper .sidebar-heading {*/
+/*  padding: 0.875rem 1.25rem;*/
+/*  font-size: 1.2rem;*/
+/*}*/
+
+/*#sidebar-wrapper .list-group {*/
+/*  width: 15rem;*/
+/*}*/
+
+/*#page-content-wrapper {*/
+/*  min-width: 100vw;*/
+/*}*/
+
+/*#wrapper.toggled #sidebar-wrapper {*/
+/*  margin-left: 0;*/
+/*}*/
+
+
 
   #page-content-wrapper {
-    min-width: 0;
+    /*min-width: 0;*/
     width: 100%;
+    /*min-width: 100vw;*/
   }
 
-  #wrapper.toggled #sidebar-wrapper {
-    margin-left: -15rem;
-  }
-}
+/*  #wrapper.toggled #sidebar-wrapper {*/
+/*    margin-left: -15rem;*/
+/*  }*/
+/*}*/
 .row_style {
   padding-left: 10px;
   padding-right: 10px;
 }
-.container.body-container{
+.container.body-container {
   padding-right: 0;
   padding-left: 0;
 }
-h1{
-  color: blue;
-}
-.row_style{
-	padding-left: 40px;
-}
-.container-fluid.backcolor{
-  background-color:   #e7e7e7;
-}
-.float_login{
-float: right;
-}
+
+
+/*h1{*/
+/*  color: blue;*/
+/*}*/
+/*.row_style{*/
+/*	padding-left: 40px;*/
+/*}*/
+/*.container-fluid.backcolor{*/
+/*  background-color:   #e7e7e7;*/
+/*}*/
+/*.float_login{*/
+/*float: right;*/
+/*}*/
 .container-fluid{
   padding: 0 !important;
 }
