--- a/templates/base.html
+++ b/templates/base.html
@@ -4,64 +4,90 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="{% static 'vendor/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'css/base_page.css' %}" type="text/css"/>
+
+    <!-- Bootstrap core JavaScript -->
+    <script src="{% static 'vendor/jquery/jquery.min.js' %}"></script>
+    <script src="{% static 'vendor/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
+    <script src="{% static 'js_scripts/base_page.js' %}"></script>
     <script src="https://kit.fontawesome.com/961150d9ae.js" crossorigin="anonymous"></script>
     <title> Base Page </title>
 </head>
+
 <body>
 <div class="container-fluid backcolor">
-   <div class="d-flex" id="wrapper">
+    <div class="d-flex" id="wrapper">
+        <nav class="bg-light border-right" id="sidebar">
+{#            <div>#}
+{#                <i class="fas fa-arrow-left"></i>#}
+{#            </div>#}
+            <div class="sidebar-header">
+                <h1>Rest POS</h1>
+            </div>
+            <div class="list-group list-group-flush">
+                <a href="/login" class="list-group-item list-group-item-action bg-light sidebck"><i
+                        class="fa fa-dashboard"></i>&nbsp;Dashboard</a>
+                <a href="{% url 'food_home' %}" class="list-group-item list-group-item-action bg-light sidebck"><i
+                        class="fa fa-money" aria-hidden="true"></i>&nbsp;Sell</a>
+                <a href="{% url 'inventory_home' %}" class="list-group-item list-group-item-action bg-light sidebck"><i
+                        class="fa fa-bar-chart" aria-hidden="true"></i>&nbsp;Inventory</a>
+                <a href="#" class="list-group-item list-group-item-action bg-light sidebck"><i class="fa fa-users"
+                                                                                               aria-hidden="true"></i>&nbsp;Staff</a>
+                <a href="#" class="list-group-item list-group-item-action bg-light sidebck"><i class="fa fa-cutlery"
+                                                                                               aria-hidden="true"></i>&nbsp;Kitchen</a>
+                <a href="#" class="list-group-item list-group-item-action bg-light sidebck"><i class="fa fa-cog"
+                                                                                               aria-hidden="true"></i>&nbsp;Settings</a>
+            </div>
+        </nav>
 
-    <!-- Sidebar -->
-    <div class="bg-light border-right" id="sidebar-wrapper">
-      <div class="sidebar-heading">Rest POS</div>
-      <div class="list-group list-group-flush">
-        <a href="/login" class="list-group-item list-group-item-action bg-light sidebck"><i class="fa fa-dashboard"></i>&nbsp;Dashboard</a>
-        <a href="{% url 'food_home' %}" class="list-group-item list-group-item-action bg-light sidebck"><i class="fa fa-money" aria-hidden="true"></i>&nbsp;Sell</a>
-        <a href="{% url 'inventory_home' %}" class="list-group-item list-group-item-action bg-light sidebck"><i class="fa fa-bar-chart" aria-hidden="true"></i>&nbsp;Inventory</a>
-        <a href="#" class="list-group-item list-group-item-action bg-light sidebck"><i class="fa fa-users" aria-hidden="true"></i>&nbsp;Staff</a>
-        <a href="#" class="list-group-item list-group-item-action bg-light sidebck"><i class="fa fa-cutlery" aria-hidden="true"></i>&nbsp;Kitchen</a>
-        <a href="#" class="list-group-item list-group-item-action bg-light sidebck"><i class="fa fa-cog" aria-hidden="true"></i>&nbsp;Settings</a>
-      </div>
-    </div>
+        <!-- Sidebar -->
+        {#    <div class="bg-light border-right" id="sidebar-wrapper">#}
+        {#      <div class="sidebar-heading">Rest POS</div>#}
+        {#      <div class="list-group list-group-flush">#}
+        {#        <a href="/login" class="list-group-item list-group-item-action bg-light sidebck"><i class="fa fa-dashboard"></i>&nbsp;Dashboard</a>#}
+        {#        <a href="{% url 'food_home' %}" class="list-group-item list-group-item-action bg-light sidebck"><i class="fa fa-money" aria-hidden="true"></i>&nbsp;Sell</a>#}
+        {#        <a href="{% url 'inventory_home' %}" class="list-group-item list-group-item-action bg-light sidebck"><i class="fa fa-bar-chart" aria-hidden="true"></i>&nbsp;Inventory</a>#}
+        {#        <a href="#" class="list-group-item list-group-item-action bg-light sidebck"><i class="fa fa-users" aria-hidden="true"></i>&nbsp;Staff</a>#}
+        {#        <a href="#" class="list-group-item list-group-item-action bg-light sidebck"><i class="fa fa-cutlery" aria-hidden="true"></i>&nbsp;Kitchen</a>#}
+        {#        <a href="#" class="list-group-item list-group-item-action bg-light sidebck"><i class="fa fa-cog" aria-hidden="true"></i>&nbsp;Settings</a>#}
+        {#      </div>#}
+        {#    </div>#}
 
-    <!-- /#sidebar-wrapper -->
+        <!-- sidebar-wrapper -->
 
-    <!-- Page Content -->
-    <div id="page-content-wrapper">
+        <!-- Page Content -->
+        <div id="page-content-wrapper">
 
-      <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom">
-          <button class="btn btn-warning" id="menu-toggle"><i class="fa fa-bars"></i></button>
-        <div class="container">
-            {% if user.is_authenticated %}
-                <p class="text-right">Logged in as: {{user.username }}</p>
-                <a class="btn btn-warning navbar-btn navbar-right pull-right" href="/logout">Logout</a>
-            {% endif %}
+            <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom" id="navbar_style">
+                <div class="container-fluid">
+                    <button class="btn btn-warning" id="sidebarCollapse"><i class="fa fa-bars"></i></button>
+                    <div>
+                        {% if user.is_authenticated %}
+                            <p class="text-right">Logged in as: {{ user.username }}</p>
+                            <a class="btn btn-warning" href="/logout">Logout</a>
+                        {% endif %}
+                    </div>
+                </div>
+
+            </nav>
+
+            <div class="row row_style">
+
+                {% block content %}
+
+                {% endblock %}
+            </div>
         </div>
-
-      </nav>
-
-        <div class="row row_style">
-
-            {% block content %}
-
-            {% endblock %}
-        </div>
     </div>
-   </div>
 </div>
 
 
-<!-- Bootstrap core JavaScript -->
-  <script src="{% static 'vendor/jquery/jquery.min.js' %}"></script>
-  <script src="{% static 'vendor/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
-
-  <!-- Menu Toggle Script -->
-  <script>
-    $("#menu-toggle").click(function(e) {
-      e.preventDefault();
-      $("#wrapper").toggleClass("toggled");
-    });
-  </script>
+<!-- Menu Toggle Script -->
+{#  <script>#}
+{#    $("#menu-toggle").click(function(e) {#}
+{#      e.preventDefault();#}
+{#      $("#wrapper").toggleClass("toogled");#}
+{#    });#}
+{#  </script>#}
 </body>
 
 
