--- a/templates/food.html
+++ b/templates/food.html
@@ -10,18 +10,18 @@
 
 <div class="col-md-8">
     <div class="row">
-        <div class="col-md-2">
-            <div class="dropdown">
-              <button class="btn btn-secondary btn-sm dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Categories
-              </button>
-              <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                <a class="dropdown-item" href="{% url 'food_home' %}">Food </a>
-                <a class="dropdown-item" href="{% url 'drinks' %}">Drinks</a>
-              </div>
-            </div>
-        </div>
-        <div class="col-md-6">
+{#        <div class="col-md-2">#}
+{#            <div class="dropdown">#}
+{#              <button class="btn btn-secondary btn-sm dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">#}
+{#                Categories#}
+{#              </button>#}
+{#              <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">#}
+{#                <a class="dropdown-item" href="{% url 'food_home' %}">Food </a>#}
+{#                <a class="dropdown-item" href="{% url 'drinks' %}">Drinks</a>#}
+{#              </div>#}
+{#            </div>#}
+{#        </div>#}
+{#        <div class="col-md-6">#}
             <div class="btn-group" role="group" aria-label="Basic example">
           <button type="button" class="btn btn-secondary">Breakfast</button>
           <button type="button" class="btn btn-secondary">Lunch</button>
@@ -29,7 +29,7 @@
           <button type="button" class="btn btn-secondary">Dessert</button>
           <button type="button" class="btn btn-secondary">Snacks</button>
             </div>
-        </div>
+{#        </div>#}
 
 
     </div>
