--- a/templates/base.html
+++ b/templates/base.html
@@ -28,7 +28,7 @@
             <div class="list-group list-group-flush">
                 <a href="/login" class="list-group-item list-group-item-action sidebck"><i
                         class="far fa-clipboard"></i>&nbsp;Dashboard</a>
-                <a href="{% url 'food_home' %}" class="list-group-item list-group-item-action sidebck"><i
+                <a href="{% url 'subcateg_list_url' %}" class="list-group-item list-group-item-action sidebck"><i
                         class="fas fa-hand-holding-usd" aria-hidden="true"></i>&nbsp;Sell</a>
                 <a href="{% url 'inventory_home' %}" class="list-group-item list-group-item-action sidebck"><i
                         class="fas fa-balance-scale" aria-hidden="true"></i>&nbsp;Inventory</a>
@@ -52,7 +52,7 @@
             <nav class="navbar navbar-expand-lg navmain_style border-bottom" id="navbar_style">
                 <div class="container-fluid">
                     <ul class="navbar-nav mr-auto">
-                        <button class="btn btn-warning" id="sidebarCollapse"><i class="fa fa-bars"></i></button>
+                        <button class="btn btn_sidebar" id="sidebarCollapse"><i class="fa fa-bars"></i></button>
                     </ul>
 
                     <ul class="navbar-nav">
@@ -72,21 +72,6 @@
                     </ul>
                     {% endif %}
                     </ul>
-{#                    <button class="btn btn-order" id="orders">Orders</button>#}
-{##}
-{#                     <!-- Dropdown -->#}
-{#                    {% if user.is_authenticated %}#}
-{#                    <ul class="nav-item dropdown">#}
-{#                      <a class="nav-link dropdown-toggle link_style" href="#" id="navbardrop" data-toggle="dropdown">#}
-{#                          <i class="fa fa-user" aria-hidden="true">#}
-{#                             <span>{{ user.username }}</span>#}
-{#                          </i>#}
-{#                      </a>#}
-{#                      <div class="dropdown-menu">#}
-{#                        <a class="dropdown-item" href="{% url 'logout' %}">Logout</a>#}
-{#                      </div>#}
-{#                    </ul>#}
-{#                    {% endif %}#}
                 </div>
             </nav>
 
